--- a/_config.yml
+++ b/_config.yml
@@ -28,3 +28,15 @@ kramdown:
   auto_id_prefix: "section-"
   header_offset: 1
   smart_quotes: ["apos", "apos", "quot", "quot"]
+
+defaults:
+  - scope:
+      path: ""
+      type: "posts"
+    values:
+      layout: "post"
+  - scope:
+      path: ""
+      type: "drafts"
+    values:
+      layout: "post"
