Fix twitter handle

--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ author:
   name: "Sebastian Wiesner"
   email: "me@lunaryorn.com"
   uri: "http://www.lunaryorn.com"
-  twitter: "lunaryorn"
+  twitter: "@lunaryorn"
   github: "lunaryorn"
 
 github:
