--- a/_config.yml
+++ b/_config.yml
@@ -15,6 +15,7 @@ github:
   url: "https://github.com/lunaryorn/lunaryorn.github.io"
 
 # Build settings
+environment: production
 markdown: redcarpet
 timezone: "Europe/Berlin"
 encoding: "utf-8"
