Move html and feed tests into test namespace

--- a/.travis.yml
+++ b/.travis.yml
@@ -5,8 +5,8 @@ rvm:
 cache:
   - bundler
 script:
-  - rake build
   - rake verify
+  - rake test
 env:
   global:
     # Speeds up installation of nokogiri
