--- a/_config.yml
+++ b/_config.yml
@@ -2,6 +2,10 @@ name: lunaryorn
 title: "Emacs.  What else?"
 description: "A personal blog about Emacs and functional programming"
 url: "http://www.lunaryorn.com"
+logo: '/logo.png'
+
+twitter:
+  username: 'lunaryorn'
 
 baseurl: ""
 
@@ -9,8 +13,6 @@ author:
   name: "Sebastian Wiesner"
   email: "me@lunaryorn.com"
   uri: "http://www.lunaryorn.com"
-  twitter: "@lunaryorn"
-  github: "lunaryorn"
 
 # Build settings
 environment: production
@@ -27,6 +29,9 @@ format:
   date_long: "%B %-d, %Y"
   date_short: "%b %d, %y"
 excerpt_separator: "<!--more-->"
+
+gems:
+  - jekyll-seo-tag
 
 sass:
   style: compressed
